--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,18 @@
-appdirs==1.4.3
-certifi==2020.6.20
-click==7.1.2
-distlib==0.3.0
-Flask==1.1.2
-Flask-Cors==3.0.8
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.15.1
-MarkupSafe==1.1.1
-numpy==1.18.1
-pandas==1.0.1
-python-dateutil==2.8.1
-pytz==2019.3
-scikit-learn==0.22.1
-scipy==1.4.1
-six==1.14.0
-virtualenv==20.0.7
-Werkzeug==1.0.1
-wincertstore==0.2
-numpy==1.16.2
-pandas==1.0.3
+click==8.0.3
+colorama==0.4.4
+Flask==2.0.2
+Flask-Cors==3.0.10
+gunicorn==20.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+joblib==1.1.0
+MarkupSafe==2.0.1
+numpy==1.21.4
+pandas==1.3.4
+python-dateutil==2.8.2
+pytz==2021.3
+scikit-learn==1.0.1
+scipy==1.7.3
+six==1.16.0
+threadpoolctl==3.0.0
+Werkzeug==2.0.2
